--- a/src/OdeToFood/Views/Home/Details.cshtml
+++ b/src/OdeToFood/Views/Home/Details.cshtml
@@ -1,5 +1,8 @@
-﻿@using OdeToFood.Controllers
-@model OdeToFood.Entities.Restaurant
+﻿@model OdeToFood.Entities.Restaurant
+
+@{ 
+    ViewBag.Title = "Details";
+}
 
 <h1>@Model.Name</h1>
 
@@ -8,7 +11,4 @@
 </div>
 <div>
     Cuisine: @Model.Cuisine
-</div>
-<div>
-    @Html.ActionLink("Home", nameof(HomeController.Index))
 </div>
