--- a/src/OdeToFood/Views/Home/Index.cshtml
+++ b/src/OdeToFood/Views/Home/Index.cshtml
@@ -1,27 +1,26 @@
-﻿@using OdeToFood.Controllers
-@model OdeToFood.ViewModels.HomePageViewModel
+﻿@model OdeToFood.ViewModels.HomePageViewModel
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>OdeToFood</title>
-</head>
-<body>
-    <h1>Welcome</h1>
+@{
+    ViewBag.Title = "Home";
+}
+
+<h1>Welcome</h1>
+<table>
+    @foreach (var restaurant in Model.Restaurants)
+    {
+        <tr>
+            <td>@restaurant.Name</td>
+            <td>
+                <a asp-action="Details" asp-route-id="@restaurant.Id">Detail</a>
+                <a asp-action="Edit" asp-route-id="@restaurant.Id">Edit</a>
+            </td>
+        </tr>
+    }
+</table>
+<div>
+    <a asp-action="Create">Create restaurant</a>
+</div>
+
+@section footer{
     <h3>@Model.CurrentMessage</h3>
-    <table>
-        @foreach (var restaurant in Model.Restaurants)
-        {
-            <tr>
-                <td>
-                    @Html.ActionLink("View", nameof(HomeController.Details), new { id = restaurant.Id })
-                </td>
-                <td>@restaurant.Name</td>
-                
-            </tr>
-        }
-    </table>
-    <div>
-        @Html.ActionLink("Create restaurant", nameof(HomeController.Create))
-    </div>
-</body>
-</html>
+}
